impementacion de recuperacion de contraseña por medio de correo

--- a/package.json
+++ b/package.json
@@ -28,5 +28,11 @@
         "tinymce": "^6.4.2",
         "tom-select": "^2.2.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "crypto": "^1.0.1",
+        "express": "^4.21.2",
+        "nodemailer": "^6.9.16"
     }
 }
